<resources>
    <string name="app_name">随波云音乐</string>

    <!--版本文本-->
    <string name="copyright">Copyright © 2019 bo. All Rights Reserved</string>

    <!--activity标题-->
    <string name="activity_forget_password">找回密码</string>

    <!--登录/注册/忘记密码-->
    <string name="login_or_register">登录/注册</string>
    <string name="immediate_experience">立即体验</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="other_login">其他登录方式</string>
    <string name="enter_username">请输入手机号或邮箱</string>
    <string name="enter_password">请输入密码(6~15位)</string>
    <string name="forget_password">忘记密码?</string>
    <string name="error_username_format">用户名格式错误</string>
    <string name="error_password_format">密码格式错误</string>
    <string name="enter_nickname">请输入昵称</string>
    <string name="enter_phone">请输入手机号</string>
    <string name="enter_email">请输入邮箱</string>
    <string name="enter_confirm_password">请确认密码</string>
    <string name="error_nickname_format">昵称格式错误</string>
    <string name="error_phone_format">手机号格式错误</string>
    <string name="error_email_format">邮箱格式错误</string>
    <string name="error_confirm_password_format">确认密码格式错误</string>
    <string name="error_confirm_password">请保持确认密码和密码一致</string>
    <string name="register2">补充资料</string>
    <string name="complete_register">完成注册</string>
    <string name="send_code">发送验证码</string>
    <string name="enter_code">请输入验证码</string>
    <string name="error_code_format">验证码格式错误</string>
    <string name="count_second">%1$ds</string>
    <string name="hint_agreement">注册即同意用户协议</string>

    <!--网络相关-->
    <string name="error_network_unknown_host">找不到服务器，请稍后再试！</string>
    <string name="error_network_connect">连接失败，请稍后再试！</string>
    <string name="error_network_timeout">连接超时，请稍后再试！</string>
    <string name="error_network_not_auth">登录信息过期，请重新登录！</string>
    <string name="error_network_not_permission">你没有权限访问！</string>
    <string name="error_network_not_found">你访问内容不存在！</string>
    <string name="error_network_server">服务器错误，请稍后再试！</string>
    <string name="error_network_unknown">未知错误，请稍后再试！</string>
    <string name="loading">拼命加载中</string>

    <!--侧滑相关-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_code">我的二维码</string>
    <string name="scan">扫一扫</string>
    <string name="my_message">我的消息</string>
    <string name="my_friend">我的好友</string>
    <string name="my_fans">我的粉丝</string>
    <string name="shop">商城</string>
    <string name="my_order">我的订单</string>
    <string name="my_new_order">我的订单（接口签名的加密）</string>
    <string name="online_music_free">在线听歌免流量</string>
    <string name="nearby">附近的人</string>
    <string name="theme">主题</string>
    <string name="recognition_music">听歌识曲</string>
    <string name="time_stop">定时停止播放</string>
    <string name="night_model">夜间模式</string>
    <string name="setting">设置</string>
    <string name="logout">退出</string>

    <!--主题相关-->
    <string name="me">我的</string>
    <string name="discovery">发现</string>
    <string name="friend">好友</string>
    <string name="video">视频</string>
    <string name="person_fm">私人FM</string>
    <string name="day_recommend">每日推荐</string>
    <string name="sheet">歌单</string>
    <string name="rank">排行榜</string>

    <!--歌单详情-->
    <string name="sheet_detail_activity">歌单详情</string>
    <string name="play_all">播放全部</string>
    <string name="music_count">(共%1$d首)</string>
    <string name="download">下载</string>
    <string name="select">多选</string>
    <!--%1表示第一个参数
    $d表示int类型-->
    <string name="cancel_collection">取消(%1$d)</string>
    <string name="collection">收藏(%1$d)</string>
    <string name="cancel_success">取消成功</string>
    <string name="collection_success">收藏成功</string>

    <!--评论相关-->
    <string name="comment_activity">评论</string>

    <!--用户详情相关-->
    <string name="user_detail_Activity">用户详情</string>
    <string name="search">搜索</string>
    <string name="sort">排序</string>
    <string name="report">报告错误</string>
    <string name="simple_player_activity">简单播放器</string>

    <!--简单播放界面相关-->
    <string name="not_play_music">没有可播放的音乐</string>
    <string name="collection_all">收藏全部</string>
    <string name="next_play">下一首播放</string>
    <string name="collect_to_sheet">收藏到歌单</string>
    <string name="comment_count">评论(%1$d)</string>
    <string name="share">分享</string>
    <string name="singer_name">歌手: (%1$s)</string>
    <string name="delete_in_sheet">从歌单中删除</string>
</resources>