<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <!--ToolBar-->
    <include layout="@layout/tool_bar"/>

    <!--内容部分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:padding="@dimen/activity_margin"
        android:orientation="vertical">

        <!--用户名输入框-->
        <EditText
            style="@style/EditText"
            android:hint="@string/enter_nickname"
            android:maxLength="10"/>

        <!--手机号输入框-->
        <EditText
            style="@style/EditText"
            android:hint="@string/enter_phone"
            android:inputType="phone"/>

        <!--邮箱输入框-->
        <EditText
            style="@style/EditText"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"/>

        <!--密码输入框-->
        <EditText
            style="@style/EditText"
            android:hint="@string/enter_password"
            android:maxLength="15"
            android:inputType="textPassword"/>

        <!--确认密码输入框-->
        <EditText
            style="@style/EditText"
            android:hint="@string/enter_confirm_password"
            android:maxLength="15"
            android:inputType="textPassword"/>

        <!--注册按钮-->
        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/padding_large"
            android:textColor="@drawable/selector_text_color_primary"
            android:background="@drawable/selector_color_primary"
            android:text="@string/register"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>